# C-EDASM

./: .gitignore  .gitmodules  APECMUE  C-EDASM.code-workspace  CMakeLists.txt  GET_FILE_INFO_FIX_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_CARD_TRAP_FIX.md  README.md  test_debug_expr.src  test_expr_eval  test_expr_eval.cpp  test_expr_eval2  test_expr_eval2.cpp  test_expr_eval3  test_expr_eval3.cpp  test_expressions.src  test_link_debug  test_link_debug.cpp  test_module1.rel  test_module2.rel  test_msb.src  test_msb_debug.src  test_rel.lst  test_rel.src  test_simple.src  test_symbol_add.src
.cache/clangd/index/: app.cpp.81A876AA67E80D7A.idx  app.hpp.CD6D414600E74539.idx  assembler.cpp.CBB2C8E83A9DDBB9.idx  assembler.hpp.B05CDB673C11E3FB.idx  editor.cpp.A52A6A3D3C98ABC2.idx  editor.hpp.0B9C0F171859BFF5.idx  file_types.hpp.C5C47B43E46FD920.idx  main.cpp.A0A64CAD6A532A16.idx  prodos_file.cpp.4B9166E05ECEEF32.idx  prodos_file.hpp.E6B99AA0AA95669B.idx  screen.cpp.DC19B8474F5FEA45.idx  screen.hpp.EB632851C2EB38FE.idx  symbol_table.cpp.87EA1C0521B9695B.idx  symbol_table.hpp.0CDFFA20C8D5D73C.idx
.github/: copilot-instructions.md
.github/workflows/: emulator-tests.yml
.trunk/: trunk.yaml
.trunk/configs/: .shellcheckrc
MAME_Stuff/: mame.apple2e.inventury  mame.apple2gs.inventury
MAME_Stuff/emulator/: README.md  ROM_SETUP.md  assemble_test.lua  boot_test.lua  edasm_assemble.lua  edasm_assemble_clean.lua  mame_inventory.lua
_codeql_build_dir/: CTestTestfile.cmake  Makefile  cmake_install.cmake  edasm_cli  test_asm  test_asm_listing  test_asm_rel  test_linker
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_assembler_integration  test_editor
docs/: 6502_INSTRUCTION_SET.md  APPLE_IIE_MEMORY_MAP.md  ASSEMBLER_ARCHITECTURE.md  Apple ProDOS 8 Technical Reference Manual.txt  COMMAND_REFERENCE.md  DEBUGGER_EMULATOR_PLAN.md  DOCUMENTATION_MAP.md  EMULATOR_DECISION_MATRIX.md  EMULATOR_DOCS_TOC.md  EMULATOR_INVESTIGATION_REPORT.md  EMULATOR_MINIMAL_PLAN.md  EMULATOR_SETUP.md  F8_ROM_LOADING_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IO_TRAPS.md  Inside the Apple IIe.txt  LANGUAGE_CARD_SWITCHES.md  LANGUAGE_CARD_VERIFICATION_SUMMARY.md  MEMORY_ARCHITECTURE.md  MISSING_FEATURES.md  MLI_DESCRIPTORS.md  MLI_LOGGING_FORMAT.md  MLI_NEWLINE_IMPLEMENTATION.md  PORTING_PLAN.md  README.md  VERIFICATION_INDEX.md  VERIFICATION_QUICK_REF.md  VERIFICATION_REPORT.md  apple2-text-screen-layout.md  edasm-cmds.md
include/edasm/: app.hpp  bus.hpp  constants.hpp  cpu.hpp  host_shims.hpp  screen.hpp  traps.hpp
include/edasm/assembler/: assembler.hpp  expression.hpp  linker.hpp  listing.hpp  opcode_table.hpp  rel_file.hpp  symbol_table.hpp  tokenizer.hpp
include/edasm/editor/: editor.hpp
include/edasm/emulator/: bus.hpp  cpu.hpp  disassembly.hpp  host_shims.hpp  mli.hpp  traps.hpp
include/edasm/files/: file_types.hpp  prodos_file.hpp
scripts/: assemble_helper.py  build.sh  compare_assemblers.sh  configure.sh  create_boot_disk.sh  disk_helper.sh  edasm_test_suite.sh  run_emulator_runner.sh  run_emulator_test.sh  setup_emulator_deps.sh  test_harness.sh  test_original_edasm.sh
src/: emulator_runner.cpp  main.cpp  test_asm.cpp  test_asm_listing.cpp  test_asm_rel.cpp  test_linker.cpp
src/assembler/: assembler.cpp  expression.cpp  linker.cpp  listing.cpp  opcode_table.cpp  symbol_table.cpp  tokenizer.cpp
src/core/: app.cpp  bus.cpp  cpu.cpp  host_shims.cpp  screen.cpp  traps.cpp
src/editor/: editor.cpp
src/emulator/: bus.cpp  cpu.cpp  disassembly.cpp  host_shims.cpp  mli.cpp  traps.cpp
src/files/: prodos_file.cpp
tests/: CMakeLists.txt  README.md  test_assembler_integration.cpp  test_editor.cpp  test_emulator.cpp  test_hex_add.src  test_io_traps.cpp  test_link_debug.cpp  test_linker_debug.cpp  test_simple_expr.src
tests/emulator/: README.md  ROM_SETUP.md  assemble_test.lua  boot_test.lua  edasm_assemble.lua  edasm_assemble_debounced.lua
tests/fixtures/: EDASM.AUTOST  test_addr_mode.src  test_directives.src  test_exec_commands.txt  test_input.txt  test_lst.src  test_module1.src  test_module2.src
tests/integration/: test_asm.cpp  test_asm_rel.cpp
tests/manual/: test_double_read.cpp
tests/unit/: test_editor.cpp  test_emulator.cpp  test_io_traps.cpp  test_language_card.cpp  test_mli_descriptors.cpp  test_mli_get_file_info.cpp  test_mli_lookup_performance.cpp  test_mli_newline.cpp  test_mli_read_eof.cpp  test_mli_set_file_info.cpp  test_mli_stubs.cpp  test_prodos_file_types.cpp  test_rom_reset.cpp
